<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feed_back">뒤로가기</string>
    <string name="feed_category_all">전체</string>
    <string name="feed_category_employment">채용</string>
    <string name="feed_category_scholarship">장학금</string>
    <string name="feed_category_contest">공모전</string>
    <string name="feed_category_external_activity">대외활동</string>
    <string name="feed_category_other">기타</string>
    <string name="feed_deadline_days">D-%1$d</string>
    <string name="feed_deadline_today">오늘 마감</string>
    <string name="feed_deadline_expired">마감</string>
...
